--- a/example-1/index.html
+++ b/example-1/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
 	<!-- 載入 CSS 檔案 -->
-	<link href="./css/style.css" type="text/css" rel="stylesheet" />
+	<link href="./css/demo.css" type="text/css" rel="stylesheet" />
 
 </head>
 
